[tool.poetry]
name = "codefighter"
version = "0.1.0"
description = ""
authors = ["Michael Ryan <michaelryan2895@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"
black = "^21.7b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
